// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox: CheckBox: [ prop: center, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`CheckBox: CheckBox: [ prop: component, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableWithoutFeedback
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      title
    </TextElement>
  </View>
</TouchableWithoutFeedback>
`;

exports[`CheckBox: CheckBox: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      Object {
        "backgroundColor": "#071",
      },
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox: CheckBox: [ prop: iconRight, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      title
    </TextElement>
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox: CheckBox: [ prop: noProps ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox: CheckBox: [ prop: onLongPress, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        Object {
          "justifyContent": "flex-end",
        },
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`CheckBox: CheckBox: [ prop: right, title, checked, & onIconPress ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        Object {
          "justifyContent": "flex-end",
        },
        false,
      ]
    }
  >
    <[object Object]
      color="green"
      name="check-square-o"
      onPress={[Function]}
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          undefined,
          undefined,
        ]
      }
    >
      title
    </TextElement>
  </View>
</TouchableOpacity>
`;

exports[`CheckBox: CheckBox: [ prop: textStyle & title ] enzyme-shallow: snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  style={
    Array [
      103,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        102,
        false,
        false,
      ]
    }
  >
    <[object Object]
      color="#bfbfbf"
      name="square-o"
      size={24}
    />
    <TextElement
      style={
        Array [
          104,
          Object {
            "backgroundColor": "#071",
          },
          undefined,
        ]
      }
    >
      title
    </TextElement>
  </View>
</TouchableOpacity>
`;
